// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> can create variant via props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Layout
    largeCols={Array []}
    mediumCols={Array []}
    smallCols={
      Array [
        12,
      ]
    }
    variant="bordered-buckets"
    xLargeCols={Array []}
    xxLargeCols={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "layout bordered-buckets",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "layout bordered-buckets",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Layout /> doesn't wrap Cols in \`<Col>\` 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Layout
    largeCols={Array []}
    mediumCols={Array []}
    smallCols={
      Array [
        1,
      ]
    }
    xLargeCols={Array []}
    xxLargeCols={Array []}
  >
    <div
      className="child"
    />
    <Col
      borderColor="neutral-6"
      className="child"
    />
  </Layout>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          className="child"
          smallCols={1}
        />,
      ],
      "className": "layout",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": ".0",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".1",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "className": "child",
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            className="child"
            smallCols={1}
          />,
        ],
        "className": "layout",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "className": "child",
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Layout /> passes its \`col\` props down to its \`<Col>\` correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Layout
    bottomSpacing="xLarge"
    fullwidth={true}
    largeCols={
      Array [
        7,
        5,
      ]
    }
    mediumCols={
      Array [
        6,
      ]
    }
    padding={true}
    smallCols={
      Array [
        1,
      ]
    }
    xLargeCols={Array []}
    xxLargeCols={Array []}
  >
    <div
      className="child"
    />
    <div
      className="child"
    />
  </Layout>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Col
          borderColor="neutral-6"
          bottomSpacing="xLarge"
          fullwidth={true}
          largeCols={7}
          mediumCols={6}
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          bottomSpacing="xLarge"
          fullwidth={true}
          largeCols={5}
          mediumCols={6}
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
      ],
      "className": "layout padding",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": ".0",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": "xLarge",
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": true,
          "largeCols": 7,
          "mediumCols": 6,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".1",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": "xLarge",
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": true,
          "largeCols": 5,
          "mediumCols": 6,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Col
            borderColor="neutral-6"
            bottomSpacing="xLarge"
            fullwidth={true}
            largeCols={7}
            mediumCols={6}
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            bottomSpacing="xLarge"
            fullwidth={true}
            largeCols={5}
            mediumCols={6}
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
        ],
        "className": "layout padding",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": "xLarge",
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": true,
            "largeCols": 7,
            "mediumCols": 6,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": "xLarge",
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": true,
            "largeCols": 5,
            "mediumCols": 6,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Layout /> renders correctly 1`] = `
<div
  className="layout"
/>
`;

exports[`<Layout /> renders its children 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Layout
    largeCols={Array []}
    mediumCols={Array []}
    smallCols={
      Array [
        1,
      ]
    }
    xLargeCols={Array []}
    xxLargeCols={Array []}
  >
    <div
      className="child"
    />
    <div
      className="some-child"
    />
    <div
      className="child"
    />
  </Layout>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="some-child"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
      ],
      "className": "layout",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": ".0",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".1",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="some-child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "some-child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".2",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="some-child"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
        ],
        "className": "layout",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="some-child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "some-child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Layout /> wraps its child \`<Col>\` with column sizes 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Layout
    largeCols={
      Array [
        7,
        5,
      ]
    }
    mediumCols={Array []}
    smallCols={
      Array [
        12,
      ]
    }
    xLargeCols={Array []}
    xxLargeCols={Array []}
  >
    <div
      className="child"
    />
    <div
      className="child"
    />
  </Layout>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Col
          borderColor="neutral-6"
          largeCols={7}
          smallCols={12}
        >
          <div
            className="child"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          largeCols={5}
          smallCols={12}
        >
          <div
            className="child"
          />
        </Col>,
      ],
      "className": "layout",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": ".0",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": 7,
          "mediumCols": undefined,
          "smallCols": 12,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".1",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": 5,
          "mediumCols": undefined,
          "smallCols": 12,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Col
            borderColor="neutral-6"
            largeCols={7}
            smallCols={12}
          >
            <div
              className="child"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            largeCols={5}
            smallCols={12}
          >
            <div
              className="child"
            />
          </Col>,
        ],
        "className": "layout",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": 7,
            "mediumCols": undefined,
            "smallCols": 12,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": 5,
            "mediumCols": undefined,
            "smallCols": 12,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Layout /> wraps its child \`<Col>\` with column sizes 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Layout
    largeCols={Array []}
    mediumCols={Array []}
    smallCols={
      Array [
        1,
      ]
    }
    xLargeCols={Array []}
    xxLargeCols={Array []}
  >
    <div
      className="child"
    />
    <Col
      borderColor="neutral-6"
      smallCols={3}
    >
      <div
        className="one-off"
      />
    </Col>
    <div
      className="child"
    />
  </Layout>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          smallCols={3}
        >
          <div
            className="one-off"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
      ],
      "className": "layout",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": ".0",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".1",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="one-off"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 3,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "one-off",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".2",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            smallCols={3}
          >
            <div
              className="one-off"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
        ],
        "className": "layout",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="one-off"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 3,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "one-off",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Layout /> wraps its children in \`<Col>\` 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Layout
    largeCols={Array []}
    mediumCols={Array []}
    smallCols={
      Array [
        1,
      ]
    }
    xLargeCols={Array []}
    xxLargeCols={Array []}
  >
    <div
      className="child"
    />
    <div
      className="child"
    />
    <div
      className="child"
    />
  </Layout>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
        <Col
          borderColor="neutral-6"
          smallCols={1}
        >
          <div
            className="child"
          />
        </Col>,
      ],
      "className": "layout",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": ".0",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".1",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".2",
        "nodeType": "function",
        "props": Object {
          "borderColor": "neutral-6",
          "bottomSpacing": undefined,
          "children": <div
            className="child"
          />,
          "flex": undefined,
          "fullwidth": undefined,
          "largeCols": undefined,
          "mediumCols": undefined,
          "smallCols": 1,
          "xLargeCols": undefined,
          "xxLargeCols": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "child",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
          <Col
            borderColor="neutral-6"
            smallCols={1}
          >
            <div
              className="child"
            />
          </Col>,
        ],
        "className": "layout",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "function",
          "props": Object {
            "borderColor": "neutral-6",
            "bottomSpacing": undefined,
            "children": <div
              className="child"
            />,
            "flex": undefined,
            "fullwidth": undefined,
            "largeCols": undefined,
            "mediumCols": undefined,
            "smallCols": 1,
            "xLargeCols": undefined,
            "xxLargeCols": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "child",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
